--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,11 @@
-<h1>This is JS30</h1>
-<%= link_to 'Drumkit', drumkit_path %>
+<div class="site-title">
+  <h1>This is JS30</h1>
+</div>
+<div class="contents">
+  <div class="contents-link">
+    <%= link_to 'Drumkit', drumkit_path %>
+  </div>
+  <div class="contents-link">
+    <%= link_to 'Clock', clock_path %>
+  </div>
+</div>
