--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -2,13 +2,48 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-html, body{
+$link-color: #ff5050;
+
+html,
+body {
   padding: 0;
   margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
-html{
+
+html {
   height: 100%;
 }
-body{
+
+body {
   height: 100%;
+}
+
+.site-title {
+  text-align: center;
+  margin-top: 10rem;
+}
+
+.contents {
+  margin-top: 4rem;
+  display: flex;
+  flex-direction: column;
+
+  a {
+    font-size: 1.3rem;
+    font-weight: 400;
+    color: $link-color;
+    text-decoration: none;
+
+    &:hover {
+      text-decoration: none;
+      font-weight: 600;
+    }
+  }
+}
+
+.contents-link {
+  text-align: center;
+  width: 100%;
+  margin-top: .5rem;
 }
