Finish css vars

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,4 +8,7 @@
   <div class="contents-link">
     <%= link_to 'Clock', clock_path %>
   </div>
+  <div class="contents-link">
+    <%= link_to 'CSS Variables', css_vars_path %>
+  </div>
 </div>
