--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,4 +11,7 @@
   <div class="contents-link">
     <%= link_to 'CSS Variables', css_vars_path %>
   </div>
+  <div class="contents-link">
+    <%= link_to 'Array Cardio Day 1', array_cardio_1_path %>
+  </div>
 </div>
